tests/bad/12_repeated_params_ident_10.ris
int add(int a, int a):
    return a + a;

void main():
    add(4, 2);
    return;