tests/bad/12_repeated_params_ident_10.err
Type error in line 1, column 16:
parameters cannot have the same identifiers: a
